Fix search bar overflow

--- a/src/style.css
+++ b/src/style.css
@@ -333,6 +333,9 @@
         padding: 5px;
         color: rgba(255, 255, 255, .5);
         border-radius: 5px;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
     }
 
     .browser-footer {
